fix(workspace): bind synchronization and recovery to verified snapshots
Address the concrete review findings from 5201946698:
- propagate metadata failures and never synthesize READY from missing metadata;
- bind pull/publish content and provenance to captured Git heads;
- reuse ExpectedHeadDslCommitter for atomic writes and no-op head checks;
- recover a legacy allocation only when its branch matches the recorded base;
- use bounded daemon-worker shutdown in the concurrent initialization test.

Also seed initial repository-specific working copies from one captured source
commit, without the compatibility factory's moving-head seed.

Retain all existing contracts, adapting only their exact snapshot/CAS fixtures.
Fifteen new cases reproduce fourteen intended failures and one valid control
before the correction. All 87 affected cases pass locally and on a clean runner
in 34911027171, on this exact tree. Complete clean verification and canonical CI
remain separate merge gates. No build, dependency, migration or coverage changes.

Part of #628; the issue remains incomplete.